--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -2,3 +2,11 @@
     display : flex;
     flex-wrap: wrap;
 }
+
+
+
+.cardHeader {
+  margin: 0;
+  background-image: url('film-strip.png');
+  background-repeat: no-repeat
+}
