Flurry of activity. Stretch cover image for posters in Details view eliminates white space

--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -8,5 +8,5 @@
 .cardHeader {
   margin: 0;
   background-image: url('film-strip.png');
-  background-repeat: no-repeat
+  background-repeat: cover;
 }
